update pet and pet-images relation
