# src/controllers/pet_controller.go
@@ -15,4 +15,5 @@ func PetController(api fiber.Router) {
 	petsRoute.Post("/", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin"}), services.CreatePet)
 	petsRoute.Patch("/:id", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin"}), services.UpdatePet)
 	petsRoute.Delete("/:id", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin"}), services.DeletePet)
+	petsRoute.Get("/types", auth.AuthMiddleware([]string{"ONG", "Duenio", "Admin", "Adoptador"}), services.GetAllPetTypes)
 }
